--- a/admin/table.html
+++ b/admin/table.html
@@ -7,7 +7,6 @@
     <style>
         table{
             border: 2px solid #eeeeee;
-            /*border-radius: 5px;*/
             border-collapse: collapse;
             font-size: 13px;
         }
@@ -26,18 +25,21 @@
         }
         .fa-comment, .fa-edit{
             color: yellowgreen;
+            padding-right: 5px;
         }
     </style>
 </head>
 <body>
     <table>
-        <tr>
-            <th>博文ID</th>
-            <th>标题</th>
-            <th>作者</th>
-            <th>时间</th>
-            <th>操作</th>
-        </tr>
+        <thead>
+            <tr>
+                <th>博文ID</th>
+                <th>标题</th>
+                <th>作者</th>
+                <th>时间</th>
+                <th>操作</th>
+            </tr>
+        </thead>
         <tbody>
             <!--<tr>-->
                 <!--<td>3001364</td>-->
