--- a/admin/add_bolg.html
+++ b/admin/add_bolg.html
@@ -73,6 +73,7 @@
                     type: 'get',
                     dataType: 'json',
                     data:{
+                        id:config.id,
                         title: $("[name='title']").val(),
                         sub_title: $("[name='sub-ititle']").val(),
                         author: $("[name='author']").val(),
