--- a/admin/table.html
+++ b/admin/table.html
@@ -25,7 +25,20 @@
         }
         .fa-comment, .fa-edit{
             color: yellowgreen;
-            padding-right: 5px;
+            padding-right: 10px;
+        }
+        #id, #author{
+            width: 100px;
+        }
+        #title{
+            width: 200px;
+        }
+
+        #time{
+            width: 150px;
+        }
+        #operate{
+            width: 62px;
         }
     </style>
 </head>
@@ -33,11 +46,11 @@
     <table>
         <thead>
             <tr>
-                <th>博文ID</th>
-                <th>标题</th>
-                <th>作者</th>
-                <th>时间</th>
-                <th>操作</th>
+                <th id="id">博文ID</th>
+                <th id="title">标题</th>
+                <th id="author">作者</th>
+                <th id="time">时间</th>
+                <th id="operate">操作</th>
             </tr>
         </thead>
         <tbody>
