--- a/admin/add_bolg.html
+++ b/admin/add_bolg.html
@@ -4,34 +4,7 @@
     <meta charset="UTF-8">
     <title>add_blog</title>
     <link rel="stylesheet" type="text/css" href="css/simditor.css">
-    <style>
-        .m-span{
-            display: inline-block;
-            font-size: 13px;
-            font-weight: 500;
-            padding: 20px 0 5px 20px;
-            width: 55px;
-        }
-        .box{
-            margin: 0 13px;
-            padding: 9px;
-            width: 320px;
-            border: 1px solid #dddddd;
-            border-radius: 5px;
-        }
-        .content{
-            display: inline-block;
-            padding: 13px;
-            width: 1000px;
-        }
-        .submit{
-            color: white;
-            background-color: #92b901;
-            border-radius: 5px;
-            margin: 10px 0 0 92px;
-            padding: 8px 18px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/add.css">
     <script>
         var config = {
             id : ""
@@ -52,7 +25,6 @@
         </div><br>
         <input type="submit" value="提交" class="submit">
     </div>
-
 </body>
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/module.js"></script>
