--- a/admin/houtai.html
+++ b/admin/houtai.html
@@ -37,6 +37,8 @@
         <div class="content left">
             <div class="list" data-src="http://www.baidu.com">博客列表</div>
             <div class="list" data-src="http://www.sina.com">新增博客</div>
+            <div class="list" data-src="http://www.baidu.com">例子列表</div>
+            <div class="list" data-src="http://www.sina.com">新增例子</div>
         </div>
         <div class="content right">
             <iframe src="">
