--- a/www/detail.html
+++ b/www/detail.html
@@ -4,38 +4,28 @@
     <meta charset="UTF-8">
     <title>详情页</title>
     <link type="text/css" rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/simditor.css">
+    <script>
+        var config = {
+            id:'1'
+        }
+    </script>
 </head>
 <body>
-
     <div class="top" id="top">
         <p class="top-title">开始时的碎碎念</p>
         <p class="top-sub-title">关于机器学习的一些碎碎念</p>
-        <p class="author-time author-time-d">Posted by cong on February 26, 2018</p>
+        <p class="author-time author-time-d">Posted by <span class="author">cong</span> on <span class="time">February 26, 2018</span></p>
     </div>
 
     <div class="container-d">
         <div class="content-d">
             <div class="article">
-                <div>
-                    <p class="article-p">机器学习的一些资源</p>
-                    <ul>
-                        <li>
-                            Coursera上的机器学习课程，斯坦福大学教授 Andrew Ng（对，就是百度的吴恩达）的课程，内容由浅入深，并且有一些练习题辅助理解。强烈推荐！！！ （使用软件，Matlab or Octave）
-                        </li>
-                        <li>
-                            极客学院有tensorflow的中文文档 版本和内容有点旧了，食用时注意一些过期的方法。
-                        </li>
-                        <li>
-                            知乎上有很多不错的关于机器学习的文章。
-                        </li>
-                        <li>
-                            一些订阅号 机器学习研究会 机器之心。
-                        </li>
-                        <li>
-                            计算机视觉-卷积神经网络
-                        </li>
-                    </ul>
-                    <p class="article-p">加我微信，一起学习：aicute221</p>
+                <div id="article-content" style="padding: 20px 0;">
+
+
+
+
                 </div>
                 <div class="line"></div>
                 <div class="box">
@@ -53,4 +43,28 @@
         <a href="#top"><p>返回顶部</p></a>
     </div>
 </body>
+<script src="js/jquery-3.2.1.js"></script>
+<script>
+    $(document).ready(function(){
+        if(config.id !== ""){
+            $.ajax({
+                url:'/site-front/www/test/a.json',
+                type: 'get',
+                dataType: 'json',
+                data:{
+                    id: config.id
+                },
+                success: function(response){
+                    if(response.status === 1){
+                        $(".top-title").text(response.data.title);
+                        $(".top-sub-title").text(response.data.sub_title);
+                        $(".author").text(response.data.author);
+                        $(".time").text(response.data.time);
+                        $("#article-content").html(response.data.content)
+                    }
+                }
+            })
+        }
+    })
+</script>
 </html>
