改主页边距

--- a/www/detail.html
+++ b/www/detail.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <div class="top" id="top">
-        <p class="top-title">开始时的碎碎念</p>
-        <p class="top-sub-title">关于机器学习的一些碎碎念</p>
-        <p class="author-time author-time-d">Posted by <span class="author">cong</span> on <span class="time">February 26, 2018</span></p>
+        <p class="top-title">。。。</p>
+        <p class="top-sub-title">。。。</p>
+        <p class="author-time author-time-d">Posted by <span class="author">。。。</span> on <span class="time">。。。</span></p>
     </div>
 
     <div class="container-d">
